<resources>
    <string name="app_name">TrackYourSport</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="enter_duration_in_minutes">Enter duration in minutes</string>
    <string name="save_exercise">Save Exercise</string>
    <string name="_00_00">00:00</string>
    <string name="start_timer">Start Timer</string>
    <string name="stop_timer">Stop Timer</string>
    <string name="reset_timer">Reset Timer</string>
</resources>